--- a/k8s/svc.yaml
+++ b/k8s/svc.yaml
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: wban-prices-api-service
-  namespace: utils
+  namespace: wban-utils
 spec:
   selector:
     app: wban-prices-api
