--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: wban-prices-api-ingress
-  namespace: utils
+  namespace: wban-utils
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
